added 'even game'

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "autoload": {
         "files": [
-            "src/Cli.php"
+            "src/Cli.php",
+            "src/Even.php"
         ]
     },
     "scripts": {
